RESOLVED FIXED281961
To signal abort, if the reason is not given, set a new "AbortError" DOMException
https://bugs.webkit.org/show_bug.cgi?id=281961
Summary To signal abort, if the reason is not given, set a new "AbortError" DOMException
Marais Rossouw
Reported 2024-10-23 02:37:05 PDT
In the DOM specification for the AbortSignal (see: https://dom.spec.whatwg.org/#abortsignal-signal-abort), point 2 states: > Set signal's abort reason to the provided reason if given; otherwise, set it to a new "AbortError" DOMException. We are not currently implementing this behavior. Instead, it's being handled in the IDL bindings for AbortController, which lacks any specification for signaling an abort. If there is any internal code that calls `AbortSignal::signalAbort`, we should ensure it adheres to this DOM specification — and not leak this implementation detail.
Attachments
Marais Rossouw
Comment 1 2024-10-23 04:10:41 PDT
EWS
Comment 2 2024-10-24 21:09:00 PDT
Committed 285686@main (7d575e9f5b20): <https://commits.webkit.org/285686@main> Reviewed commits have been landed. Closing PR #35618 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-24 21:09:15 PDT
Note You need to log in before you can comment on or make changes to this bug.