Source/WebCore/dom/Subscriber.cpp
@@ -117,7 +117,7 @@ void Subscriber::close(JSC::JSValue reason)
 
     m_active = false;
 
-    m_abortController->abort(*JSC::jsCast<JSDOMGlobalObject*>(context->globalObject()), reason);
+    m_abortController->abort(reason);
 
     {
         Locker locker { m_teardownsLock };
